Use introspection to overcome API differences in Google Guava
Guava changes the API in a bad way in version 15. Geppetto must
be compatible with older versions when coexisting with Xtext. It
must be compatible with recent versions to be able to run in
newer versions of the Jenkins server.