@@ -120,7 +120,7 @@
 			<dependency>
 				<groupId>args4j</groupId>
 				<artifactId>args4j</artifactId>
-				<version>2.0.21</version>
+				<version>2.0.26</version>
 			</dependency>
 			<dependency>
 				<groupId>com.almworks.sqlite4java</groupId>
@@ -138,12 +138,12 @@
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
 				<artifactId>annotations</artifactId>
-				<version>2.0.1</version>
+				<version>2.0.3</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
-				<version>2.2.2</version>
+				<version>2.2.4</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.inject</groupId>
@@ -158,17 +158,17 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>13.0.1</version>
+				<version>16.0</version>
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.0.9</version>
+				<version>1.0.13</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
-				<version>1.7</version>
+				<version>1.9</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-lang</groupId>
@@ -203,22 +203,22 @@
 			<dependency>
 				<groupId>org.antlr.runtime</groupId>
 				<artifactId>org.antlr.runtime</artifactId>
-				<version>3.2.0.v201101311130</version>
+				<version>3.2.0-v201101311130</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpmime</artifactId>
-				<version>4.2.3</version>
+				<version>4.3.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-compress</artifactId>
-				<version>1.4.1</version>
+				<version>1.7</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.2.3</version>
+				<version>4.3.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.maven.plugin-tools</groupId>
@@ -231,12 +231,12 @@
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
 				<artifactId>plexus-utils</artifactId>
-				<version>3.0.8</version>
+				<version>3.0.16</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-core-asl</artifactId>
-				<version>1.9.12</version>
+				<version>1.9.13</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.core</groupId>
@@ -327,7 +327,7 @@
 			<dependency>
 				<groupId>org.sonatype.sisu</groupId>
 				<artifactId>sisu-guice</artifactId>
-				<version>3.1.0</version>
+				<version>3.1.9</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -470,7 +470,7 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
-						<forkMode>never</forkMode>
+						<argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
 					</configuration>
 					<version>2.13</version>
 				</plugin>
